--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .app {
   text-align: center;
 }
+
+.navbar {
+  background-color: lightgreen; 
+}
+
+.navbar nav {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.navbar-logo {
+  width: 50px;
+  height: 50px;
+}
